5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1760_672.log
== TEST (2019-05-22 18:13:37) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v0 = zeros (1 ,"dtype=int")
v1 = ones (0 ,"dtype=int")
print(v0)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:14:45) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v0 = "zeros" (1 ,"dtype=int")
v1 = "ones"(0 ,"dtype=int")
print(v0)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:11) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v0 = "zeros" (5 ,"dtype=int")
v1 = "ones"(0 ,"dtype=int")
print(v0)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:15:50) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v0 = "zeros" (n ,"dtype=int")
v1 = "ones"(0 ,"dtype=int")
print(v0)
print(v1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:17:23) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
vn = "zeros" (1 ,"dtype=int")
vn = "ones"(1 ,"dtype=int")
print(vn)
print(vn)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:18:39) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
vn = "ones"(1 ,"dtype=int")
print(vn)
print(vn)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:19:46) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:20:26) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:21:13) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
v = arange(1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:21:27) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
v = arange(2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:21:47) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:22:07) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:22:19) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(5)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:22:34) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(6)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:23:21) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:23:35) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(0)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:23:49) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(n)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:24:02) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(n1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:24:27) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = arange(1)
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:25:49) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = array(eval(input("1")))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:26:11) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = array(eval(input("1")))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:26:32) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v = array(eval(input("1")))
print(v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:27:28) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
n = array(eval(input("1")))
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:27:43) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
n = array(eval(input("1")))
print(n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:29:54) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1])
print(v1)

v2 = array([])
print(v2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:30:28) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)

v2 = array([])
print(v2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:31:05) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)

v2 = array([])
print(v2)


-- EXECUTION TIME:
0.503684
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
[]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:31:13) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:31:37) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:31:51) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- EXECUTION TIME:
0.297834
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:32:13) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:40) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(eval("input"([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
File "XXXX", line 4
    print(v1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:48) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(eval(([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
File "XXXX", line 4
    print(v1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:33:55) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:34:17) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- EXECUTION TIME:
0.553657
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:34:35) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:35:39) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:38:10) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- EXECUTION TIME:
0.498656
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:10) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:39:20) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:39:25) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- EXECUTION TIME:
0.419316
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:39:50) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1:])
print(v1)



-- EXECUTION TIME:
0.178684
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    v1 = array([1, 1, 1, 1, 1, 1:])
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:39:55) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1:])
print(v1)



-- EXECUTION TIME:
0.117146
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    v1 = array([1, 1, 1, 1, 1, 1:])
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:42:07) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(eval(input("1")))
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:42:34) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([eval(input("1"))])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:43:01) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([eval(input("v1"))])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:43:28) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([eval(input("1, 1, 1, 1, 1, 1"))])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:44:04) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([eval(input("1, 1, 1, 1, 1, 1"))])
print(v1)



-- EXECUTION TIME:
0.580202
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/672/main.py", line 3, in <module>
    v1 = array([eval(input())])
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:44:41) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([eval(input("1, 1, 1, 1, 1, 1"))])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:45:58) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(eval(input(["1, 1, 1, 1, 1, 1:"])))
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:46:46) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(eval(input([1 1 1 1 1 1])))
print(v1)



-- ERROR:
File "XXXX", line 3
    v1 = array(eval(input([1 1 1 1 1 1])))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:47:03) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(eval(input([1 1 1 1 1 1]))
print(v1)



-- ERROR:
File "XXXX", line 3
    v1 = array(eval(input([1 1 1 1 1 1]))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:47:38) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(1, 1, 1, 1, 1, 1)
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:48:10) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array(1, 1, 1, 1, 1, 1)
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:56:34) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = arange(1)
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:57:32) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = arange(16)
print(v1)



-- EXECUTION TIME:
0.427837
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:57:40) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = arange(6)
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:59:07) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 18:59:28) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- EXECUTION TIME:
0.376313
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:00:45) 
-- CODE:
from numpy import *
a = int(input("n,positivo: "))
v1 = array([1, 1, 1, 1, 1, 1])
print(v1)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:18:55) 
-- CODE:
from numpy import *
a = int(input("numero positivo: ")
b = ones(a, dtype= int)
print(a)



-- ERROR:
File "XXXX", line 3
    b = ones(a, dtype= int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:19:16) 
-- CODE:
from numpy import *
a = int(input("numero positivo: ")
b = ones(a, "dtype" = int)
print(a)



-- EXECUTION TIME:
0.195296
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    b = ones(a, "dtype" = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:20:01) 
-- CODE:
from numpy import *
a = int(input("numero positivo: ")
b = ones(a, "dtype" = int)
print(b)



-- ERROR:
File "XXXX", line 3
    b = ones(a, "dtype" = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:28:28) 
-- CODE:
from numpy import *
x = int(input("numero positivo: ")
y = ones(x, "dtype" = int)

print(b)



-- ERROR:
File "XXXX", line 3
    y = ones(x, "dtype" = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:29:32) 
-- CODE:
from numpy import *
x = int(input("numero positivo: ")
y = ones(x, "dtype"_ = _int)

print(b)



-- ERROR:
File "XXXX", line 3
    y = ones(x, "dtype"_ = _int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:29:58) 
-- CODE:
from numpy import *
x = int(input("numero positivo: ")
y = ones(x, "dtype" = int)

print(b)



-- EXECUTION TIME:
0.134899
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    y = ones(x, "dtype" = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:30:56) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
		  
y = ones(x, "dtype" = int)

print(b)



-- ERROR:
File "XXXX", line 4
    y = ones(x, "dtype" = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:31:01) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, "dtype" = int)

print(b)



-- ERROR:
File "XXXX", line 3
    y = ones(x, "dtype" = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:31:20) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, dtype = int)

print(b)



-- ERROR:
File "XXXX", line 3
    y = ones(x, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:31:45) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, dtype = int)

print(b)



-- EXECUTION TIME:
0.185934
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    y = ones(x, dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:31:51) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, dtype = int)

print(b)



-- ERROR:
File "XXXX", line 3
    y = ones(x, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:33:07) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, dtype = int)

print(b)



-- ERROR:
File "XXXX", line 3
    y = ones(x, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:35:12) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, dtype = int)

print(b)



-- EXECUTION TIME:
0.18018
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    y = ones(x, dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:35:14) 
-- CODE:
from numpy import *
x = int(input("digite um numero: ")
y = ones(x, dtype = int)

print(b)



-- EXECUTION TIME:
0.197948
-- ERROR:
  File "/home/codebench/codes/1760/672/main.py", line 3
    y = ones(x, dtype = int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:39:19) 
-- CODE:
from numpy import *

x = int(input("digite um numero: "))
y = ones(x, dtype = int)

print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:39:49) 
-- CODE:
from numpy import *

x = int(input("digite um numero: "))
y = ones(x, dtype = int)

print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:40:11) 
-- CODE:
from numpy import *

x = int(input("digite um numero: "))
y = ones(x, dtype = int)

print(y)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 18:40:20) 
-- CODE:
from numpy import *

x = int(input("digite um numero: "))
y = ones(x, dtype = int)

print(y)



-- EXECUTION TIME:
0.458373
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
